src/objects/TPA_Use_Offering_Atypical_Combination__c.object
<CustomObject>
    <fields>
        <fullName>IMS_Use_Offering_Atypical_Combination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IMS Use Offering Atypical Combination</label>
        <referenceTo>IMS_Use_Offering_Atypical_Combination__c</referenceTo>
        <relationshipLabel>TPA Use Offering Atypical Combinations</relationshipLabel>
        <relationshipName>TPA_Use_Offering_Atypical_Combinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating Account records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TPA_Offering_Notification_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Records the ID of Text Editor Record</description>
        <inlineHelpText>Rules associated with Offering Notification</inlineHelpText>
        <label>TPA Offering Notification Record</label>
        <referenceTo>TPA_Text_Editor__c</referenceTo>
        <relationshipLabel>TPA Use Offering Atypical Combinations</relationshipLabel>
        <relationshipName>TPA_Use_Offering_Atypical_Combinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TPA_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TPA Request</label>
        <referenceTo>TPA_Request__c</referenceTo>
        <relationshipLabel>TPA Use Offering Atypical Combinations</relationshipLabel>
        <relationshipName>TPA_Use_Offering_Atypical_Combinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of data the record holds</description>
        <inlineHelpText>Associated Record</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offering Notification Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TPA Use Offering Atypical Combination</label>
    <nameField>
        <label>TPA Use Offering Atypical Combination Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TPA Use Offering Atypical Combinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>